# workspace

./: .gitignore  AGENTS.md  Cargo.toml  README.md  skills-lock.json
.agents/skills/ws-init/: SKILL.md
.agents/skills/ws-self-heal/: SKILL.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.dex/: tasks.jsonl
.githooks/: pre-commit
.pi/extensions/: rustfmt-hook.ts
agents/: orchestrator.md  product-agent.md  repo-agent.md  reviewer-agent.md
catalog/knowledge/: README.md
catalog/knowledge/raw/: .gitignore  README.md
catalog/knowledge/wiki/: index.md  log.md
config/: default.yaml
config/providers/: confluence.md  dex.md  jira.md
crates/ws-ai-docs/: Cargo.toml
crates/ws-ai-docs/src/: lib.rs
crates/ws-catalog/: Cargo.toml
crates/ws-catalog/src/: lib.rs
crates/ws-cli/: Cargo.toml
crates/ws-cli/assets/catalog-knowledge/: SCHEMA.md
crates/ws-cli/assets/catalog-knowledge/wiki/: _template.md
crates/ws-cli/src/: assets.rs  main.rs
crates/ws-config/: Cargo.toml
crates/ws-config/src/: lib.rs
crates/ws-core/: Cargo.toml
crates/ws-core/src/: command.rs  context.rs  editors.rs  error.rs  lib.rs  models.rs  providers.rs
crates/ws-editors/: Cargo.toml
crates/ws-editors/src/: lib.rs
crates/ws-kb/: Cargo.toml
crates/ws-kb/src/: lib.rs  lint.rs
crates/ws-provider-dex/: Cargo.toml
crates/ws-provider-dex/src/: lib.rs
crates/ws-provider-github-gh/: Cargo.toml
crates/ws-provider-github-gh/src/: lib.rs
crates/ws-provider-jira/: Cargo.toml
crates/ws-provider-jira/src/: confluence.rs  lib.rs
crates/ws-providers/: Cargo.toml
crates/ws-providers/src/: lib.rs
crates/ws-repo/: Cargo.toml
crates/ws-repo/src/: fix_loop.rs  healthcheck.rs  lib.rs  run.rs  understand.rs  verify.rs
crates/ws-workspace/: Cargo.toml
crates/ws-workspace/src/: lib.rs
docs/: cli-centric-restructure-plan.md  command-api.md
docs/features/: knowledge-base.md
schemas/: product.schema.json  service.schema.json  team.schema.json  workspace.schema.json
skills/: README.md
skills/ws-init/: SKILL.md
skills/ws-self-heal/: SKILL.md
templates/: prd.md  product.yaml  provider-instructions.md  pull-request.md  service.yaml  team.yaml  understand-anything-action.yml  understand-anything.gitattributes  workspace.yaml
workflows/: cross-repo-review.md  deploy.md  idea-to-prd.md  issue-to-implementation.md  knowledge-base.md  prd-to-issues.md  repo-init.md  repo-verify.md
