[package]
name = "ws-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
async-trait = { workspace = true }
ws-core = { workspace = true }

